--- a/src/App.css
+++ b/src/App.css
@@ -48,3 +48,14 @@
     ". .";
 
 }
+@media (max-width: 480px) {
+    .grid {
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr;
+        grid-template-areas:
+    "."
+    "."
+    "."
+    ".";
+    }
+}
