--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,8 @@
     transform: rotate(360deg);
   }
 }
-.grid {
+@media (min-width: 700px) {
+  .grid {
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -47,15 +48,17 @@
     ". ."
     ". .";
 
+  }
+
 }
-@media (max-width: 480px) {
-    .grid {
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr 1fr 1fr;
-        grid-template-areas:
-    "."
-    "."
-    "."
-    ".";
-    }
-}
+/*@media (max-width: 700px) {*/
+    /*.grid {*/
+    /*    grid-template-columns: 1fr;*/
+    /*    grid-template-rows: 1fr 1fr 1fr 1fr;*/
+    /*    grid-template-areas:*/
+    /*"."*/
+    /*"."*/
+    /*"."*/
+    /*".";*/
+    /*}*/
+/*}*/
