--- a/src/App.css
+++ b/src/App.css
@@ -38,19 +38,12 @@
 }
 @media (min-width: 700px) {
   .grid {
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    gap: 10px 10px;
-
-    grid-template-areas:
-    ". ."
-    ". .";
-
+   width: 70%;
   }
 
 }
+
+
 /*@media (max-width: 700px) {*/
     /*.grid {*/
     /*    grid-template-columns: 1fr;*/
