--- a/src/App.css
+++ b/src/App.css
@@ -55,3 +55,11 @@
     /*".";*/
     /*}*/
 /*}*/
+.imghover {
+  transition: transform 0.3s ease;
+}
+.imghover:hover {
+  transition: transform 0.3s ease;
+  transform: scale(1.1);
+  box-shadow: rgba(236, 225, 204, 0.28) 0px 5px 8px;
+}
